--- a/mum.css
+++ b/mum.css
@@ -15,7 +15,7 @@
   .video-background-container {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
   }
   
