--- a/mum.css
+++ b/mum.css
@@ -23,15 +23,17 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
     z-index: -1;
-    background-size: cover; /* Ensures the image covers the entire container */
-    background-position: center; /* Centers the image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-    width: 100vw; /* Full viewport width */
-    height: 100vh; /* Full viewport height */
+    background-size: cover; 
+      /* Ensures the image covers the entire container */
+    background-position: center;
+      /* Centers the image */
+    background-repeat: no-repeat; 
+      /* Prevents the image from repeating */
+    width: 100vw;
+      /* Full viewport width */
+    height: 100vh; 
+      /* Full viewport height */
   }
   
   /* Content styling */
